# saneproject

./: CMakeLists.txt  imgui.ini
sandbox/: CMakeLists.txt  README.md
sandbox/src/: main.cpp  test.cpp
saneengine/: CMakeLists.txt  README.md
saneengine/include/detail/saneengine/: window.hpp
saneengine/include/detail/saneengine/layer/: imguicontext.hpp  layerstack.hpp
saneengine/include/public/saneengine/: api.hpp  application.hpp  entrypoint.hpp  event.hpp
saneengine/include/public/saneengine/ecs/: system.hpp  systemmanager.hpp
saneengine/include/public/saneengine/ecs/components/: shader.hpp  transform.hpp  vertex.hpp
saneengine/include/public/saneengine/ecs/systems/: rendersystem.hpp
saneengine/include/public/saneengine/gfx/buffers/: buffer.hpp  vertexattribute.hpp  vertexbuffer.hpp
saneengine/include/public/saneengine/gfx/shaders/: shaderprogram.hpp  shadertype.hpp
saneengine/include/public/saneengine/layer/: imguicontextmanager.hpp  imguilayer.hpp  imguiperformancelayer.hpp  layer.hpp
saneengine/include/public/saneengine/utils/: notcopyable.hpp  uuid.hpp
saneengine/src/: application.cpp  window.cpp
saneengine/src/buffers/: buffer.cpp  vertexbuffer.cpp
saneengine/src/ecs/: system.cpp  systemmanager.cpp
saneengine/src/ecs/components/: vertex.cpp
saneengine/src/ecs/systems/: rendersystem.cpp
saneengine/src/layer/: imguicontext.cpp  imguicontextmanager.cpp  imguilayer.cpp  imguiperformancelayer.cpp  layer.cpp  layerstack.cpp
saneengine/src/shaders/: shaderprogram.cpp
saneengine/src/utils/: uuid.cpp
